sherpa-onnx/c-api/cxx-api.h

// ============================================================================
// Non-streaming TTS
// ============================================================================
/** @brief VITS model configuration. */
struct OfflineTtsVitsModelConfig {
  /** Acoustic model file. */
  std::string model;
  /** Lexicon file. */
  std::string lexicon;
  /** Token file. */
  std::string tokens;
  /** Data directory such as `espeak-ng-data`. */
  std::string data_dir;
  /** Reserved field. Currently unused by the wrapper. */
  std::string dict_dir;

  /** VITS noise scale. */
  float noise_scale = 0.667;
  /** VITS noise scale for duration prediction. */
  float noise_scale_w = 0.8;
  /** Length scale. Values < 1 are faster; values > 1 are slower. */
  float length_scale = 1.0;
};
/** @brief Matcha model configuration. */
struct OfflineTtsMatchaModelConfig {
  /** Acoustic model file. */
  std::string acoustic_model;
  /** Vocoder model file. */
  std::string vocoder;
  /** Lexicon file. */
  std::string lexicon;
  /** Token file. */
  std::string tokens;
  /** Data directory such as `espeak-ng-data`. */
  std::string data_dir;
  /** Reserved field. Currently unused by the wrapper. */
  std::string dict_dir;

  /** Matcha noise scale. */
  float noise_scale = 0.667;
  /** Length scale. Values < 1 are faster; values > 1 are slower. */
  float length_scale = 1.0;
};
/** @brief Kokoro model configuration. */
struct OfflineTtsKokoroModelConfig {
  /** Acoustic model file. */
  std::string model;
  /** Voices file. */
  std::string voices;
  /** Token file. */
  std::string tokens;
  /** Data directory such as `espeak-ng-data`. */
  std::string data_dir;
  /** Reserved field. Currently unused by the wrapper. */
  std::string dict_dir;
  /** Optional lexicon file. */
  std::string lexicon;
  /** Language/voice family hint. */
  std::string lang;

  /** Length scale. Values < 1 are faster; values > 1 are slower. */
  float length_scale = 1.0;
};
/** @brief Kitten model configuration. */
struct OfflineTtsKittenModelConfig {
  /** Acoustic model file. */
  std::string model;
  /** Voices file. */
  std::string voices;
  /** Token file. */
  std::string tokens;
  /** Data directory. */
  std::string data_dir;

  /** Length scale. Values < 1 are faster; values > 1 are slower. */
  float length_scale = 1.0;
};
/** @brief ZipVoice model configuration. */
struct OfflineTtsZipvoiceModelConfig {
  /** Token file. */
  std::string tokens;
  /** Encoder model file. */
  std::string encoder;
  /** Decoder model file. */
  std::string decoder;
  /** Vocoder model file. */
  std::string vocoder;
  /** Data directory. */
  std::string data_dir;
  /** Lexicon file. */
  std::string lexicon;

  /** Feature scale. */
  float feat_scale = 0.1;
  /** Time shift. */
  float t_shift = 0.5;
  /** Target RMS. */
  float target_rms = 0.1;
  /** Guidance scale. */
  float guidance_scale = 1.0;
};
/** @brief Pocket TTS model configuration. */
struct OfflineTtsPocketModelConfig {
  /** Flow model file. */
  std::string lm_flow;
  /** Main language model file. */
  std::string lm_main;
  /** Encoder model file. */
  std::string encoder;
  /** Decoder model file. */
  std::string decoder;
  /** Text conditioner model file. */
  std::string text_conditioner;

  /** Vocabulary JSON file. */
  std::string vocab_json;
  /** Token scores JSON file. */
  std::string token_scores_json;
  /** Voice embedding cache size. */
  int32_t voice_embedding_cache_capacity = 50;
};
/** @brief Supertonic model configuration. */
struct OfflineTtsSupertonicModelConfig {
  /** Duration predictor model file. */
  std::string duration_predictor;
  /** Text encoder model file. */
  std::string text_encoder;
  /** Vector estimator model file. */
  std::string vector_estimator;
  /** Vocoder model file. */
  std::string vocoder;
  /** Model metadata JSON. */
  std::string tts_json;
  /** Unicode indexer resource. */
  std::string unicode_indexer;
  /** Voice style resource. */
  std::string voice_style;
};
/**
 * @brief Model configuration for offline TTS.
 *
 * Configure exactly one model family. If multiple model families are set, one
 * is chosen and the choice is implementation-defined.
 */
struct OfflineTtsModelConfig {
  /** VITS configuration. */
  OfflineTtsVitsModelConfig vits;
  /** Matcha configuration. */
  OfflineTtsMatchaModelConfig matcha;
  /** Kokoro configuration. */
  OfflineTtsKokoroModelConfig kokoro;
  /** Kitten configuration. */
  OfflineTtsKittenModelConfig kitten;
  /** ZipVoice configuration. */
  OfflineTtsZipvoiceModelConfig zipvoice;
  /** Pocket configuration. */
  OfflineTtsPocketModelConfig pocket;
  /** Supertonic configuration. */
  OfflineTtsSupertonicModelConfig supertonic;

  /** Number of inference threads. */
  int32_t num_threads = 1;
  /** Enable verbose debug logging. */
  bool debug = false;
  /** Execution provider such as `"cpu"`. */
  std::string provider = "cpu";
};
/** @brief Configuration for offline TTS. */
struct OfflineTtsConfig {
  /** Model configuration. */
  OfflineTtsModelConfig model;
  /** Optional ITN rule FST archive. */
  std::string rule_fsts;
  /** Optional ITN rule FAR archive. */
  std::string rule_fars;
  /** Sentence chunking limit for generation. */
  int32_t max_num_sentences = 1;
  /** Silence scale between generated sentences. */
  float silence_scale = 0.2;
};