sherpa-onnx/c-api/c-api.h

/**
 * @brief Configuration for offline text-to-speech.
 *
 * @code
 * SherpaOnnxOfflineTtsConfig config;
 * memset(&config, 0, sizeof(config));
 *
 * config.model.kokoro.model = "./kokoro-en-v0_19/model.onnx";
 * config.model.kokoro.voices = "./kokoro-en-v0_19/voices.bin";
 * config.model.kokoro.tokens = "./kokoro-en-v0_19/tokens.txt";
 * config.model.kokoro.data_dir = "./kokoro-en-v0_19/espeak-ng-data";
 * config.model.num_threads = 2;
 * config.model.provider = "cpu";
 * config.model.debug = 0;
 * config.max_num_sentences = 2;
 * @endcode
 * @see SherpaOnnxCreateOfflineTts
 */
typedef struct SherpaOnnxOfflineTtsConfig {
  /** TTS model configuration. */
  SherpaOnnxOfflineTtsModelConfig model;
  /** Optional comma-separated rule FST list. */
  const char *rule_fsts;
  /** Maximum number of sentences processed per chunk. */
  int32_t max_num_sentences;
  /** Optional FAR archives used by text normalization rules. */
  const char *rule_fars;
  /** Default silence scale between sentences. */
  float silence_scale;
} SherpaOnnxOfflineTtsConfig;
/**
 * @brief Generated waveform returned by TTS APIs.
 *
 * The returned structure owns @c samples. Free the whole object with
 * SherpaOnnxDestroyOfflineTtsGeneratedAudio().
 * @see SherpaOnnxOfflineTtsGenerateWithConfig, SherpaOnnxDestroyOfflineTtsGeneratedAudio
 */
typedef struct SherpaOnnxGeneratedAudio {
  /** Generated mono samples in the range [-1, 1]. */
  const float *samples;
  /** Number of samples in @c samples. */
  int32_t n;
  /** Output sample rate. */
  int32_t sample_rate;
} SherpaOnnxGeneratedAudio;
/**
 * @brief Callback invoked during incremental generation.
 *
 * Return 1 to continue generation. Return 0 to stop early.
 *
 * The @p samples pointer is only valid during the callback. Copy the samples if
 * you need to keep them after the callback returns.
 */
typedef int32_t (*SherpaOnnxGeneratedAudioCallback)(const float *samples,
                                                    int32_t n);
/**
 * @brief Same as SherpaOnnxGeneratedAudioCallback but with an extra user
 * pointer.
 */
typedef int32_t (*SherpaOnnxGeneratedAudioCallbackWithArg)(const float *samples,
                                                           int32_t n,
                                                           void *arg);
/**
 * @brief Progress callback invoked during incremental generation.
 *
 * @param samples Newly generated samples valid only during the callback.
 * @param n Number of samples in @p samples.
 * @param p Progress in the range [0, 1].
 * @return Return 1 to continue generation. Return 0 to stop early.
 */
typedef int32_t (*SherpaOnnxGeneratedAudioProgressCallback)(
    const float *samples, int32_t n, float p);
/**
 * @brief Same as SherpaOnnxGeneratedAudioProgressCallback but with an extra
 * user pointer.
 */
typedef int32_t (*SherpaOnnxGeneratedAudioProgressCallbackWithArg)(
    const float *samples, int32_t n, float p, void *arg);
/** @brief Opaque offline TTS handle. */
typedef struct SherpaOnnxOfflineTts SherpaOnnxOfflineTts;
/**
 * @brief Create an offline TTS engine.
 *
 * @param config TTS configuration.
 * @return A newly allocated TTS engine on success, or NULL on configuration
 *         error. Free it with SherpaOnnxDestroyOfflineTts().
 *
 * @code
 * SherpaOnnxOfflineTtsConfig config;
 * memset(&config, 0, sizeof(config));
 * config.model.kokoro.model = "./kokoro-en-v0_19/model.onnx";
 * config.model.kokoro.voices = "./kokoro-en-v0_19/voices.bin";
 * config.model.kokoro.tokens = "./kokoro-en-v0_19/tokens.txt";
 * config.model.kokoro.data_dir = "./kokoro-en-v0_19/espeak-ng-data";
 * config.model.num_threads = 2;
 *
 * const SherpaOnnxOfflineTts *tts = SherpaOnnxCreateOfflineTts(&config);
 * @endcode
 * @see SherpaOnnxOfflineTtsConfig, SherpaOnnxDestroyOfflineTts
 */
SHERPA_ONNX_API const SherpaOnnxOfflineTts *SherpaOnnxCreateOfflineTts(
    const SherpaOnnxOfflineTtsConfig *config);
/**
 * @brief Destroy an offline TTS engine.
 *
 * @param tts A pointer returned by SherpaOnnxCreateOfflineTts().
 * @see SherpaOnnxCreateOfflineTts
 */
SHERPA_ONNX_API void SherpaOnnxDestroyOfflineTts(
    const SherpaOnnxOfflineTts *tts);
/**
 * @brief Return the output sample rate of a TTS engine.
 *
 * @param tts A pointer returned by SherpaOnnxCreateOfflineTts().
 * @return Output sample rate in Hz.
 */
SHERPA_ONNX_API int32_t
SherpaOnnxOfflineTtsSampleRate(const SherpaOnnxOfflineTts *tts);
/**
 * @brief Return the number of available speaker IDs.
 *
 * Single-speaker models often return 1.
 *
 * @param tts A pointer returned by SherpaOnnxCreateOfflineTts().
 * @return Number of speakers supported by the model.
 */
SHERPA_ONNX_API int32_t
SherpaOnnxOfflineTtsNumSpeakers(const SherpaOnnxOfflineTts *tts);
/**
 * @brief Generate speech from text using the simple sid/speed interface.
 *
 * @deprecated Use SherpaOnnxOfflineTtsGenerateWithConfig() instead.
 *
 * @param tts A pointer returned by SherpaOnnxCreateOfflineTts().
 * @param text Input text.
 * @param sid Speaker ID for multi-speaker models.
 * @param speed Speech rate. Values > 1 are faster.
 * @return Generated audio, or NULL on error. Free it with
 *         SherpaOnnxDestroyOfflineTtsGeneratedAudio().
 *
 * @code
 * const SherpaOnnxGeneratedAudio *audio =
 *     SherpaOnnxOfflineTtsGenerate(tts, "Hello from sherpa-onnx!", 0, 1.0f);
 * SherpaOnnxWriteWave(audio->samples, audio->n, audio->sample_rate,
 *                     "./generated.wav");
 * SherpaOnnxDestroyOfflineTtsGeneratedAudio(audio);
 * @endcode
 * @see SherpaOnnxDestroyOfflineTtsGeneratedAudio, SherpaOnnxGenerationConfig
 */
SHERPA_ONNX_API SHERPA_ONNX_DEPRECATED(
    "Use SherpaOnnxOfflineTtsGenerateWithConfig() instead") const
    SherpaOnnxGeneratedAudio *SherpaOnnxOfflineTtsGenerate(
        const SherpaOnnxOfflineTts *tts, const char *text, int32_t sid,
        float speed);
/**
 * @brief Generate speech and receive incremental audio chunks through a
 * callback.
 *
 * @deprecated Use SherpaOnnxOfflineTtsGenerateWithConfig() instead.
 *
 * The callback receives newly generated samples. The sample pointer is valid
 * only for the duration of the callback.
 *
 * @param tts A pointer returned by SherpaOnnxCreateOfflineTts().
 * @param text Input text.
 * @param sid Speaker ID for multi-speaker models.
 * @param speed Speech rate. Values > 1 are faster.
 * @param callback Incremental callback. Return 0 to stop generation early.
 * @return Final generated audio, or NULL on error. Free it with
 *         SherpaOnnxDestroyOfflineTtsGeneratedAudio().
 */
SHERPA_ONNX_API SHERPA_ONNX_DEPRECATED(
    "Use SherpaOnnxOfflineTtsGenerateWithConfig() instead") const
    SherpaOnnxGeneratedAudio *SherpaOnnxOfflineTtsGenerateWithCallback(
        const SherpaOnnxOfflineTts *tts, const char *text, int32_t sid,
        float speed, SherpaOnnxGeneratedAudioCallback callback);
/**
 * @brief Generate speech with a progress callback.
 *
 * @deprecated Use SherpaOnnxOfflineTtsGenerateWithConfig() instead.
 *
 * @param tts A pointer returned by SherpaOnnxCreateOfflineTts().
 * @param text Input text.
 * @param sid Speaker ID for multi-speaker models.
 * @param speed Speech rate. Values > 1 are faster.
 * @param callback Progress callback. Return 0 to stop generation early.
 * @return Final generated audio, or NULL on error. Free it with
 *         SherpaOnnxDestroyOfflineTtsGeneratedAudio().
 *
 * @code
 * int32_t Progress(const float *samples, int32_t n, float p) {
 *   fprintf(stderr, "Progress: %.2f%%\n", p * 100);
 *   return 1;
 * }
 *
 * const SherpaOnnxGeneratedAudio *audio =
 *     SherpaOnnxOfflineTtsGenerateWithProgressCallback(tts, text, 0, 1.0f,
 *                                                      Progress);
 * @endcode
 */
SHERPA_ONNX_API SHERPA_ONNX_DEPRECATED(
    "Use SherpaOnnxOfflineTtsGenerateWithConfig() instead") const
    SherpaOnnxGeneratedAudio *SherpaOnnxOfflineTtsGenerateWithProgressCallback(
        const SherpaOnnxOfflineTts *tts, const char *text, int32_t sid,
        float speed, SherpaOnnxGeneratedAudioProgressCallback callback);
/**
 * @brief Generate speech with a progress callback that receives a user pointer.
 *
 * @deprecated Use SherpaOnnxOfflineTtsGenerateWithConfig() instead.
 *
 * @param tts A pointer returned by SherpaOnnxCreateOfflineTts().
 * @param text Input text.
 * @param sid Speaker ID for multi-speaker models.
 * @param speed Speech rate. Values > 1 are faster.
 * @param callback Progress callback with user pointer. Return 0 to stop early.
 * @param arg User pointer forwarded to @p callback.
 * @return Final generated audio, or NULL on error. Free it with
 *         SherpaOnnxDestroyOfflineTtsGeneratedAudio().
 */
SHERPA_ONNX_API SHERPA_ONNX_DEPRECATED(
    "Use SherpaOnnxOfflineTtsGenerateWithConfig() instead") const
    SherpaOnnxGeneratedAudio
        *SherpaOnnxOfflineTtsGenerateWithProgressCallbackWithArg(
            const SherpaOnnxOfflineTts *tts, const char *text, int32_t sid,
            float speed,
            SherpaOnnxGeneratedAudioProgressCallbackWithArg callback,
            void *arg);
/**
 * @brief Same as SherpaOnnxOfflineTtsGenerateWithCallback() but with a user
 * pointer.
 *
 * @deprecated Use SherpaOnnxOfflineTtsGenerateWithConfig() instead.
 *
 * @param tts A pointer returned by SherpaOnnxCreateOfflineTts().
 * @param text Input text.
 * @param sid Speaker ID for multi-speaker models.
 * @param speed Speech rate. Values > 1 are faster.
 * @param callback Incremental callback with user pointer.
 * @param arg User pointer forwarded to @p callback.
 * @return Final generated audio, or NULL on error. Free it with
 *         SherpaOnnxDestroyOfflineTtsGeneratedAudio().
 */
SHERPA_ONNX_API SHERPA_ONNX_DEPRECATED(
    "Use SherpaOnnxOfflineTtsGenerateWithConfig() instead") const
    SherpaOnnxGeneratedAudio *SherpaOnnxOfflineTtsGenerateWithCallbackWithArg(
        const SherpaOnnxOfflineTts *tts, const char *text, int32_t sid,
        float speed, SherpaOnnxGeneratedAudioCallbackWithArg callback,
        void *arg);
/**
 * @brief Deprecated ZipVoice-specific generation API.
 *
 * Use SherpaOnnxOfflineTtsGenerateWithConfig() instead.
 */
SHERPA_ONNX_API SHERPA_ONNX_DEPRECATED(
    "Use SherpaOnnxOfflineTtsGenerateWithConfig() instead") const
    SherpaOnnxGeneratedAudio *SherpaOnnxOfflineTtsGenerateWithZipvoice(
        const SherpaOnnxOfflineTts *tts, const char *text,
        const char *prompt_text, const float *prompt_samples, int32_t n_prompt,
        int32_t prompt_sr, float speed, int32_t num_steps);
/**
 * @brief Generation-time parameters shared by advanced TTS APIs.
 *
 * This struct supports both simple multi-speaker synthesis and more advanced
 * zero-shot or reference-conditioned models.
 *
 * Example for Pocket TTS:
 *
 * @code
 * SherpaOnnxGenerationConfig cfg;
 * memset(&cfg, 0, sizeof(cfg));
 * cfg.speed = 1.0f;
 * cfg.reference_audio = wave->samples;
 * cfg.reference_audio_len = wave->num_samples;
 * cfg.reference_sample_rate = wave->sample_rate;
 * cfg.extra = "{\"max_reference_audio_len\": 10.0, \"seed\": 42}";
 * @endcode
 * @see SherpaOnnxOfflineTtsGenerateWithConfig
 */
typedef struct SherpaOnnxGenerationConfig {
  /** Silence scale between sentences. */
  float silence_scale;
  /** Speech rate. Used only by models that support it. */
  float speed;
  /** Speaker ID for multi-speaker models. */
  int32_t sid;
  /** Optional reference audio for zero-shot or voice-cloning models. */
  const float *reference_audio;
  /** Length of @c reference_audio in samples. */
  int32_t reference_audio_len;
  /** Sample rate of @c reference_audio. */
  int32_t reference_sample_rate;
  /** Optional reference text associated with @c reference_audio. */
  const char *reference_text;
  /** Optional number of flow-matching steps. */
  int32_t num_steps;
  /** Optional model-specific JSON string with extra key/value pairs. */
  const char *extra;
} SherpaOnnxGenerationConfig;
/**
 * @brief Generate speech using the advanced configuration interface.
 *
 * This is the preferred API for new integrations. It supports callback-based
 * progress reporting and model-specific options such as reference audio.
 *
 * @param tts A pointer returned by SherpaOnnxCreateOfflineTts().
 * @param text Input text.
 * @param config Generation-time configuration.
 * @param callback Optional progress callback with user pointer. Return 0 to
 *                 stop early.
 * @param arg User pointer forwarded to @p callback.
 * @return Generated audio, or NULL on error. Free it with
 *         SherpaOnnxDestroyOfflineTtsGeneratedAudio().
 *
 * @code
 * SherpaOnnxGenerationConfig cfg;
 * memset(&cfg, 0, sizeof(cfg));
 * cfg.sid = 0;
 * cfg.speed = 1.0f;
 * cfg.silence_scale = 0.2f;
 *
 * const SherpaOnnxGeneratedAudio *audio =
 *     SherpaOnnxOfflineTtsGenerateWithConfig(tts,
 *         "Today as always, men fall into two groups.",
 *         &cfg, NULL, NULL);
 * @endcode
 */
SHERPA_ONNX_API const SherpaOnnxGeneratedAudio *
SherpaOnnxOfflineTtsGenerateWithConfig(
    const SherpaOnnxOfflineTts *tts, const char *text,
    const SherpaOnnxGenerationConfig *config,
    SherpaOnnxGeneratedAudioProgressCallbackWithArg callback, void *arg);
/**
 * @brief Destroy audio returned by a TTS generation API.
 *
 * @param p A pointer returned by one of the SherpaOnnxOfflineTtsGenerate*
 *          functions.
 * @see SherpaOnnxOfflineTtsGenerateWithConfig
 */
SHERPA_ONNX_API void SherpaOnnxDestroyOfflineTtsGeneratedAudio(
    const SherpaOnnxGeneratedAudio *p);